Keep v0.10 task tools compatible with minSdk 26